Add Impressum and Privacy Policy pages with footer links

--- a/index.html
+++ b/index.html
@@ -501,7 +501,11 @@
                     <p class="mb-0">&copy; 2025 AI Startup. All rights reserved.</p>
                 </div>
                 <div class="col-md-6 text-md-end">
-                    <p class="mb-0">Powered by Artificial Intelligence & Human Expertise</p>
+                    <p class="mb-0">
+                        Powered by Artificial Intelligence & Human Expertise | 
+                        <a href="impressum.html" class="text-white text-decoration-underline">Impressum</a> | 
+                        <a href="impressum.html#privacy" class="text-white text-decoration-underline">Privacy Policy</a>
+                    </p>
                 </div>
             </div>
         </div>
