Add multi-language support (EN/DE/ES/FR/IT) with automatic browser detection, update email to mario.muja@gmail.com, update README with new URL

--- a/impressum.html
+++ b/impressum.html
@@ -72,9 +72,9 @@
 
                             <h3 class="mb-3 mt-4">Contact</h3>
                             <p>
-                                <i class="bi bi-envelope me-2"></i>Email: <a href="mailto:contact@aistartup.com">contact@aistartup.com</a><br>
+                                <i class="bi bi-envelope me-2"></i>Email: <a href="mailto:mario.muja@gmail.com">mario.muja@gmail.com</a><br>
                                 <i class="bi bi-telephone me-2"></i>Phone: [Phone Number]<br>
-                                <i class="bi bi-globe me-2"></i>Website: <a href="https://aistartup.vercel.app">https://aistartup.vercel.app</a>
+                                <i class="bi bi-globe me-2"></i>Website: <a href="https://aistartup-hamburg.vercel.app">https://aistartup-hamburg.vercel.app</a>
                             </p>
 
                             <h3 class="mb-3 mt-4">Represented by</h3>
@@ -248,7 +248,7 @@
                             <h3 class="mb-3 mt-4">8. Contact</h3>
                             <p>
                                 For questions regarding data protection, please contact us at:<br>
-                                Email: <a href="mailto:privacy@aistartup.com">privacy@aistartup.com</a>
+                                Email: <a href="mailto:mario.muja@gmail.com">mario.muja@gmail.com</a>
                             </p>
                         </div>
                     </section>
