Add Stefan Gimmler to team section, now only need 2 AI-generated faces

--- a/public/index.html
+++ b/public/index.html
@@ -493,6 +493,81 @@
         </div>
     </section>
 
+    <!-- Team Section -->
+    <section class="py-5 bg-light">
+        <div class="container py-5">
+            <div class="text-center mb-5">
+                <h2 class="display-5 fw-bold mb-3" data-i18n="team.title">Meet Our Team</h2>
+                <p class="lead text-muted" data-i18n="team.subtitle">Expert developers leveraging AI to deliver exceptional results</p>
+            </div>
+            <div class="row g-4 justify-content-center">
+                <!-- Team Member 1: Mario Muja -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-card card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center p-4">
+                            <div class="team-photo mb-3">
+                                <img src="images/mario-muja.jpg" alt="Mario Muja" class="img-fluid rounded-circle">
+                            </div>
+                            <h5 class="card-title mb-1">Mario Muja</h5>
+                            <p class="text-primary mb-2">CEO & Lead Architect</p>
+                            <p class="card-text text-muted small">
+                                Expert in enterprise integrations and AI-powered development with decades of experience.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Team Member 2: Sarah Chen (AI Generated) -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-card card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center p-4">
+                            <div class="team-photo mb-3">
+                                <img src="images/sarah-chen.jpg" alt="Sarah Chen" class="img-fluid rounded-circle">
+                            </div>
+                            <h5 class="card-title mb-1">Sarah Chen</h5>
+                            <p class="text-primary mb-2">Senior Full-Stack Developer</p>
+                            <p class="card-text text-muted small">
+                                Specializes in Angular, React, and modern UI/UX design with AI-assisted development.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Team Member 3: Stefan Gimmler -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-card card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center p-4">
+                            <div class="team-photo mb-3">
+                                <img src="images/stefan-gimmler.jpg" alt="Stefan Gimmler" class="img-fluid rounded-circle">
+                            </div>
+                            <h5 class="card-title mb-1">Stefan Gimmler</h5>
+                            <p class="text-primary mb-2">Integration Specialist</p>
+                            <p class="card-text text-muted small">
+                                Expert in SAP, Dynamics 365, and enterprise system integrations with 15+ years experience.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Team Member 4: Luca Martinelli (AI Generated) -->
+                <div class="col-lg-3 col-md-6">
+                    <div class="team-card card h-100 border-0 shadow-sm">
+                        <div class="card-body text-center p-4">
+                            <div class="team-photo mb-3">
+                                <img src="images/luca-martinelli.jpg" alt="Luca Martinelli" class="img-fluid rounded-circle">
+                            </div>
+                            <h5 class="card-title mb-1">Luca Martinelli</h5>
+                            <p class="text-primary mb-2">DevOps & Cloud Architect</p>
+                            <p class="card-text text-muted small">
+                                Manages cloud infrastructure and CI/CD pipelines for Azure, AWS, and Google Cloud.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer class="bg-dark text-white py-4">
         <div class="container">
