Add Andrea Mertens to team section - only 1 AI face remaining

--- a/public/index.html
+++ b/public/index.html
@@ -517,14 +517,14 @@
                     </div>
                 </div>
 
-                <!-- Team Member 2: Sarah Chen (AI Generated) -->
+                <!-- Team Member 2: Andrea Mertens -->
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card card h-100 border-0 shadow-sm">
                         <div class="card-body text-center p-4">
                             <div class="team-photo mb-3">
-                                <img src="images/sarah-chen.jpg" alt="Sarah Chen" class="img-fluid rounded-circle">
+                                <img src="images/andrea-mertens.jpg" alt="Andrea Mertens" class="img-fluid rounded-circle">
                             </div>
-                            <h5 class="card-title mb-1">Sarah Chen</h5>
+                            <h5 class="card-title mb-1">Andrea Mertens</h5>
                             <p class="text-primary mb-2">Senior Full-Stack Developer</p>
                             <p class="card-text text-muted small">
                                 Specializes in Angular, React, and modern UI/UX design with AI-assisted development.
