Team section COMPLETE! Added Maximilian Zeiler - all 4 team members now have real photos

--- a/index.html
+++ b/index.html
@@ -549,14 +549,14 @@
                     </div>
                 </div>
 
-                <!-- Team Member 4: Luca Martinelli (AI Generated) -->
+                <!-- Team Member 4: Maximilian Zeiler -->
                 <div class="col-lg-3 col-md-6">
                     <div class="team-card card h-100 border-0 shadow-sm">
                         <div class="card-body text-center p-4">
                             <div class="team-photo mb-3">
-                                <img src="images/luca-martinelli.jpg" alt="Luca Martinelli" class="img-fluid rounded-circle">
+                                <img src="images/maximilian-zeiler.jpg" alt="Maximilian Zeiler" class="img-fluid rounded-circle">
                             </div>
-                            <h5 class="card-title mb-1">Luca Martinelli</h5>
+                            <h5 class="card-title mb-1">Maximilian Zeiler</h5>
                             <p class="text-primary mb-2">DevOps & Cloud Architect</p>
                             <p class="card-text text-muted small">
                                 Manages cloud infrastructure and CI/CD pipelines for Azure, AWS, and Google Cloud.
