--- a/public/index.html
+++ b/public/index.html
@@ -100,20 +100,20 @@
                 <div class="col-lg-6">
                     <div class="hero-illustration">
                         <div class="floating-card card-1">
-                            <i class="bi bi-cpu"></i>
-                            <span data-i18n="hero.card1">AI-Generated Code</span>
+                            <i class="bi bi-diagram-3"></i>
+                            <span data-i18n="hero.card1">System-Integration</span>
                         </div>
                         <div class="floating-card card-2">
-                            <i class="bi bi-shield-check"></i>
-                            <span data-i18n="hero.card2">Enterprise Quality</span>
+                            <i class="bi bi-microsoft"></i>
+                            <span data-i18n="hero.card2">Dynamics 365 Extensions</span>
                         </div>
                         <div class="floating-card card-3">
-                            <i class="bi bi-lightning-charge"></i>
-                            <span data-i18n="hero.card3">Lightning Fast</span>
+                            <i class="bi bi-phone"></i>
+                            <span data-i18n="hero.card3">Android Apps</span>
                         </div>
                         <div class="floating-card card-4">
-                            <i class="bi bi-diagram-3"></i>
-                            <span data-i18n="hero.card4">Smart Architecture</span>
+                            <i class="bi bi-three-dots"></i>
+                            <span data-i18n="hero.card4">und vieles mehr ...</span>
                         </div>
                     </div>
                 </div>
