--- a/public/index.html
+++ b/public/index.html
@@ -462,7 +462,7 @@
                 </div>
             </div>
             <div class="row mt-5">
-                <div class="col-md-4 mb-3">
+                <div class="col-md-3 mb-3">
                     <div class="d-flex align-items-center">
                         <i class="bi bi-envelope-fill fs-3 me-3"></i>
                         <div>
@@ -471,7 +471,17 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-3 mb-3">
+                    <div class="d-flex align-items-center">
+                        <i class="bi bi-telephone-fill fs-3 me-3"></i>
+                        <div>
+                            <h6 class="mb-1" data-i18n="cta.phoneLabel">Phone</h6>
+                            <a href="tel:+4915204641473" class="text-white text-decoration-none d-block">+49 1520 464 1473</a>
+                            <a href="tel:+393453450098" class="text-white text-decoration-none d-block small">+39 345 345 0098</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-3 mb-3">
                     <div class="d-flex align-items-center">
                         <i class="bi bi-clock-fill fs-3 me-3"></i>
                         <div>
@@ -480,7 +490,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-md-4 mb-3">
+                <div class="col-md-3 mb-3">
                     <div class="d-flex align-items-center">
                         <i class="bi bi-globe fs-3 me-3"></i>
                         <div>
