--- a/public/impressum.html
+++ b/public/impressum.html
@@ -38,6 +38,9 @@
                         <a class="nav-link" href="index.html#services">Services</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="index.html#team">Team</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="index.html#contact">Contact</a>
                     </li>
                     <li class="nav-item">
