--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
                         <a class="nav-link" href="#capabilities" data-i18n="nav.capabilities">Capabilities</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="#team" data-i18n="nav.team">Our Team</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="#contact" data-i18n="nav.contact">Contact</a>
                     </li>
                 </ul>
@@ -504,7 +507,7 @@
     </section>
 
     <!-- Team Section -->
-    <section class="py-5 bg-light">
+    <section id="team" class="py-5 bg-light">
         <div class="container py-5">
             <div class="text-center mb-5">
                 <h2 class="display-5 fw-bold mb-3" data-i18n="team.title">Meet Our Team</h2>
