Remove ellipsis from 'und vieles mehr' card text since icon already shows three dots

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                         </div>
                         <div class="floating-card card-4">
                             <i class="bi bi-three-dots"></i>
-                            <span data-i18n="hero.card4">und vieles mehr ...</span>
+                            <span data-i18n="hero.card4">und vieles mehr</span>
                         </div>
                     </div>
                 </div>
