--- a/public/index.html
+++ b/public/index.html
@@ -116,7 +116,7 @@
                         </div>
                         <div class="floating-card card-4">
                             <i class="bi bi-three-dots"></i>
-                            <span data-i18n="hero.card4">und vieles mehr ...</span>
+                            <span data-i18n="hero.card4">und vieles mehr</span>
                         </div>
                     </div>
                 </div>
